--- a/result.html
+++ b/result.html
@@ -2,13 +2,28 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Result Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="result.css">
+    <link href="https://fonts.googleapis.com/css?family=Gaegu:300" rel="stylesheet">
+
 </head>
 <body>
-    <h1>결과 페이지</h1>
-    <p>당신의 결과는: <strong th:text="${result}"></strong> 입니다.</p>
+    <div class="container">
+        <h1>결과 페이지</h1>
+        <div class="center">
+            <label for="mbtiSelect">당신의 결과는 : </label>
+            <select id="mbtiSelect">
+                <option value="ESTP">ESTP</option>
+                <option value="ESFP">ESFP</option>
+                <option value="ENTP">ENTP</option>
+                <option value="ENFP">ENFP</option>
+                <!-- 다른 MBTI 유형도 추가 -->
+            </select>
+        </div>
+        <button id="recommendButton">게임 추천 받기</button>
+        <div id="recommendations" class="game-grid"></div>
+        <script src="game.js"></script>
+    </div>
 </body>
 </html>
